--- a/test-output/old/My Extent Report Suite/classes.html
+++ b/test-output/old/My Extent Report Suite/classes.html
@@ -50,13 +50,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>validateStylePropertyOfSaveButton</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>validateVegIsSelectedByDefault</td>
 <td>Sanity test </td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateStylePropertyOfSaveButton</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>validateUploadedFileIsPreviewDisplayed</td>
@@ -182,6 +182,45 @@
 <td>&nbsp;</td>
 <td>validateAdminProfileAlreadyExists</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>testCases.HomeTestCases</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>manageExpenseTextValidation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>homeBgColorValidation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>manageUsersTextValidation</td>
+<td>Smoke test </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
