--- a/test-output/old/My Extent Report Suite/methods-not-run.html
+++ b/test-output/old/My Extent Report Suite/methods-not-run.html
@@ -1,16 +1,28 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>testCases.ManageLocationTestCases.validateStateNameFromDropdown<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validate the value selected from the  state dropdown</i></td></tr>
-<tr><td>testCases.ManageDeliveryBoyTestCases.validateSearchButtonColor<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the color property of search button</i></td></tr>
-<tr><td>testCases.PushNotificationsTestCases.validateAlertMsgBgColor<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the background color of alert message</i></td></tr>
 <tr><td>testCases.AdminUsersTestCases.validateAdminProfileAlreadyExists<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>validating a user profile already exists</i></td></tr>
-<tr><td>testCases.ManageDeliveryBoyTestCases.validateSearchButtonClickability<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the search button is enabled</i></td></tr>
+<tr><td>testCases.LoginTestCases.profileNameStyleValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating color property of profile name</i></td></tr>
+<tr><td>testCases.MobileSliderTestCases.validateStatusOfFirstImage<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the status of first image</i></td></tr>
 <tr><td>testCases.ManageProductTestCases.validateStockIsYesByDefault<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether yes button is selected by default for stock</i></td></tr>
-<tr><td>testCases.ManageProductTestCases.validateStylePropertyOfSaveButton<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the font color of save button</i></td></tr>
-<tr><td>testCases.ManageProductTestCases.validateUploadedFileIsPreviewDisplayed<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the uploaded file is previewed</i></td></tr>
-<tr><td>testCases.ManageOrdersTestCases.validatePaymentModeIsBank<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the payment mode is bank itself while selecting bank from dropdown</i></td></tr>
+<tr><td>testCases.HomeTestCases.manageExpenseTextValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the text of manage expense</i></td></tr>
+<tr><td>testCases.MobileSliderTestCases.validateImageDisplay<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the first image is displayed</i></td></tr>
 <tr><td>testCases.PushNotificationsTestCases.validateColorOfMandatoryField<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the color of mandatory field</i></td></tr>
+<tr><td>testCases.SettingsPageTestCases.validateLogout<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether logout button logs out of the page</i></td></tr>
 <tr><td>testCases.ManageOrdersTestCases.validateSizeOfStatusDropdown<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating size of the status dropdown</i></td></tr>
 <tr><td>testCases.PushNotificationsTestCases.validateAlertMessage<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the text of alert message</i></td></tr>
+<tr><td>testCases.MobileSliderTestCases.validateTitleOfThePage<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the title of mobile slider page</i></td></tr>
+<tr><td>testCases.HomeTestCases.homeBgColorValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the background color of home page</i></td></tr>
 <tr><td>testCases.PushNotificationsTestCases.validateColorOfSendButton<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the color of send button</i></td></tr>
+<tr><td>testCases.ManageDeliveryBoyTestCases.validateSearchButtonColor<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the color property of search button</i></td></tr>
+<tr><td>testCases.LoginTestCases.loggedInProfileNameValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Login using data provider</i></td></tr>
+<tr><td>testCases.LoginTestCases.loggedInProfileNameValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the profile name of logged user</i></td></tr>
+<tr><td>testCases.PushNotificationsTestCases.validateAlertMsgBgColor<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the background color of alert message</i></td></tr>
+<tr><td>testCases.ManageDeliveryBoyTestCases.validateSearchButtonClickability<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the search button is enabled</i></td></tr>
+<tr><td>testCases.ManageOrdersTestCases.validatePaymentModeIsBank<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the payment mode is bank itself while selecting bank from dropdown</i></td></tr>
+<tr><td>testCases.ManageProductTestCases.validateStylePropertyOfSaveButton<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the font color of save button</i></td></tr>
+<tr><td>testCases.ManageProductTestCases.validateUploadedFileIsPreviewDisplayed<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the uploaded file is previewed</i></td></tr>
+<tr><td>testCases.LoginTestCases.validationOfRememberMeCheckbox<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether remember checkbox is unchecked</i></td></tr>
+<tr><td>testCases.LoginTestCases.excelRead<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Login using excel read</i></td></tr>
+<tr><td>testCases.ManageExpenseTestCases.validatingTheProductTitleAlreadyExists<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether product title already exists</i></td></tr>
 <tr><td>testCases.ManageOrdersTestCases.validateOrderIdAndPaymentMode<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the text of given order id and its payment mode</i></td></tr>
 </table>
