--- a/test-output/old/TestRunnerSuite/classes.html
+++ b/test-output/old/TestRunnerSuite/classes.html
@@ -4,27 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.ManageOrdersTestCases</td>
+<td>testCases.LoginTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatePaymentModeIsBank</td>
+<td>loggedInProfileNameValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateSizeOfStatusDropdown</td>
+<td>validationOfRememberMeCheckbox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateDeletionOfProductOrder</td>
-<td>Regression test </td>
-</tr>
+<td>loggedInProfileNameValidation</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateOrderIdAndPaymentMode</td>
+<td>excelRead</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>profileNameStyleValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
