--- a/test-output/old/TestRunnerSuite/methods-not-run.html
+++ b/test-output/old/TestRunnerSuite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testCases.LoginTestCases.loggedInProfileNameValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Login using data provider</i></td></tr>
+<tr><td>testCases.LoginTestCases.loggedInProfileNameValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the profile name of logged user</i></td></tr>
+<tr><td>testCases.LoginTestCases.validationOfRememberMeCheckbox<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether remember checkbox is unchecked</i></td></tr>
+<tr><td>testCases.LoginTestCases.excelRead<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Login using excel read</i></td></tr>
 </table>
