--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">TestRunnerSuite</th></tr>
-<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,502</td><td></td><td></td></tr>
+<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,534</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testCases.ManageOrdersTestCases</td><td><a href="#m0">validateDeletionOfProductOrder</a></td><td rowspan="1">1673327263993</td><td rowspan="1">7358</td></tr><tr class="passedeven"><td><a href="#m1">validateOrderIdAndPaymentMode</a></td><td rowspan="1">1673327256972</td><td rowspan="1">4278</td></tr><tr class="passedeven"><td><a href="#m2">validatePaymentModeIsBank</a></td><td rowspan="1">1673327251051</td><td rowspan="1">3041</td></tr><tr class="passedeven"><td><a href="#m3">validateSizeOfStatusDropdown</a></td><td rowspan="1">1673327246162</td><td rowspan="1">2100</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.LoginTestCases</td><td><a href="#m0">profileNameStyleValidation</a></td><td rowspan="1">1673841050373</td><td rowspan="1">751</td></tr></tbody>
 </table>
-<h2>MyFirstTest</h2><h3 id="m0">testCases.ManageOrdersTestCases#validateDeletionOfProductOrder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.ManageOrdersTestCases#validateOrderIdAndPaymentMode</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testCases.ManageOrdersTestCases#validatePaymentModeIsBank</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testCases.ManageOrdersTestCases#validateSizeOfStatusDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>MyFirstTest</h2><h3 id="m0">testCases.LoginTestCases#profileNameStyleValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
