--- a/test-output/old/My Extent Report Suite/methods-alphabetical.html
+++ b/test-output/old/My Extent Report Suite/methods-alphabetical.html
@@ -1,40 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>My Extent Report Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageDeliveryBoyTestCases@5bfbf16f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:14</td>   <td>3764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.PushNotificationsTestCases@25af5db5]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:20</td>   <td>9454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageProductTestCases@12cdcf4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:24</td>   <td>13308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageLocationTestCases@5bcea91b]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:46</td>   <td>34996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.AdminUsersTestCases@5f3a4b84]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:55</td>   <td>44752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageOrdersTestCases@27f723]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:02</td>   <td>-8663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageDeliveryBoyTestCases@5bfbf16f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:11</td>   <td>148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.PushNotificationsTestCases@25af5db5]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:15</td>   <td>3899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageProductTestCases@12cdcf4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:20</td>   <td>9583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageLocationTestCases@5bcea91b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:40</td>   <td>29579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.AdminUsersTestCases@5f3a4b84]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>23/01/09 23:04:46</td>   <td>35126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageOrdersTestCases@27f723]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>23/01/09 23:04:43</td>   <td>31966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTestCases.validateAdminProfileWithFaker()[pri:1, instance:testCases.AdminUsersTestCases@5f3a4b84]">validateAdminProfileWithFaker</td> 
-  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="97fd8f">  <td>23/01/09 23:04:23</td>   <td>11862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageLocationTestCases.validateCountOfActiveStatus()[pri:1, instance:testCases.ManageLocationTestCases@5bcea91b]">validateCountOfActiveStatus</td> 
-  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="a7e666">  <td>23/01/09 23:04:48</td>   <td>37482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOrdersTestCases.validateDeletionOfProductOrder()[pri:4, instance:testCases.ManageOrdersTestCases@27f723]">validateDeletionOfProductOrder</td> 
-  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>23/01/09 23:04:13</td>   <td>2417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationsTestCases.validateTitleOfThePage()[pri:1, instance:testCases.PushNotificationsTestCases@25af5db5]">validateTitleOfThePage</td> 
-  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>23/01/09 23:04:06</td>   <td>-4450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDeliveryBoyTestCases.validateToolKit()[pri:1, instance:testCases.ManageDeliveryBoyTestCases@5bfbf16f]">validateToolKit</td> 
-  <td>main@232307208</td>   <td></td> </tr>
-<tr bgcolor="fed1b6">  <td>23/01/09 23:04:17</td>   <td>6238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductTestCases.validateVegIsSelectedByDefault()[pri:1, instance:testCases.ManageProductTestCases@12cdcf4]">validateVegIsSelectedByDefault</td> 
-  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.PushNotificationsTestCases@7b69c6ba]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:29</td>   <td>3463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.HomeTestCases@4923ab24]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:52</td>   <td>26739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageDeliveryBoyTestCases@44c8afef]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:02</td>   <td>36922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageOrdersTestCases@46daef40]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:09</td>   <td>43307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageProductTestCases@12f41634]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:13</td>   <td>47447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageLocationTestCases@13c27452]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:35</td>   <td>69458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.AdminUsersTestCases@262b2c86]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:20</td>   <td>-5310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.PushNotificationsTestCases@7b69c6ba]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:25</td>   <td>135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.HomeTestCases@4923ab24]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:45</td>   <td>19747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageDeliveryBoyTestCases@44c8afef]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:05:52</td>   <td>26900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageOrdersTestCases@46daef40]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:02</td>   <td>37056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageProductTestCases@12f41634]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:09</td>   <td>43461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageLocationTestCases@13c27452]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bbf57e">  <td>23/01/16 09:06:29</td>   <td>63721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.AdminUsersTestCases@262b2c86]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>23/01/16 09:05:28</td>   <td>2587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTestCases.manageUsersTextValidation()[pri:3, instance:testCases.HomeTestCases@4923ab24]">manageUsersTextValidation</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="89daf3">  <td>23/01/16 09:06:32</td>   <td>66180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTestCases.validateAdminProfileWithFaker()[pri:1, instance:testCases.AdminUsersTestCases@262b2c86]">validateAdminProfileWithFaker</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="bfb96a">  <td>23/01/16 09:06:11</td>   <td>45830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageLocationTestCases.validateCountOfActiveStatus()[pri:1, instance:testCases.ManageLocationTestCases@13c27452]">validateCountOfActiveStatus</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>23/01/16 09:05:55</td>   <td>29372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOrdersTestCases.validateDeletionOfProductOrder()[pri:4, instance:testCases.ManageOrdersTestCases@46daef40]">validateDeletionOfProductOrder</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="b6cbcc">  <td>23/01/16 09:05:24</td>   <td>-1545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationsTestCases.validateTitleOfThePage()[pri:1, instance:testCases.PushNotificationsTestCases@7b69c6ba]">validateTitleOfThePage</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>23/01/16 09:05:48</td>   <td>22254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDeliveryBoyTestCases.validateToolKit()[pri:1, instance:testCases.ManageDeliveryBoyTestCases@44c8afef]">validateToolKit</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
+<tr bgcolor="94e588">  <td>23/01/16 09:06:05</td>   <td>39811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductTestCases.validateVegIsSelectedByDefault()[pri:1, instance:testCases.ManageProductTestCases@12f41634]">validateVegIsSelectedByDefault</td> 
+  <td>main@1499136125</td>   <td></td> </tr>
 </table>
