--- a/test-output/old/TestRunnerSuite/groups.html
+++ b/test-output/old/TestRunnerSuite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression test</td><td>ManageOrdersTestCases.validateDeletionOfProductOrder()[pri:4, instance:testCases.ManageOrdersTestCases@6b9651f3]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
