--- a/test-output/old/TestRunnerSuite/methods.html
+++ b/test-output/old/TestRunnerSuite/methods.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestRunnerSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>23/01/10 10:37:26</td>   <td>3817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOrdersTestCases.validateSizeOfStatusDropdown()[pri:1, instance:testCases.ManageOrdersTestCases@6b9651f3]">validateSizeOfStatusDropdown</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:28</td>   <td>5920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:28</td>   <td>6176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>23/01/10 10:37:31</td>   <td>8707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOrdersTestCases.validatePaymentModeIsBank()[pri:2, instance:testCases.ManageOrdersTestCases@6b9651f3]">validatePaymentModeIsBank</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:34</td>   <td>11749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:34</td>   <td>12170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>23/01/10 10:37:36</td>   <td>14628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOrdersTestCases.validateOrderIdAndPaymentMode()[pri:3, instance:testCases.ManageOrdersTestCases@6b9651f3]">validateOrderIdAndPaymentMode</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:41</td>   <td>18909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:41</td>   <td>19347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>23/01/10 10:37:43</td>   <td>21649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOrdersTestCases.validateDeletionOfProductOrder()[pri:4, instance:testCases.ManageOrdersTestCases@6b9651f3]">validateDeletionOfProductOrder</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8866ef">  <td>23/01/10 10:37:51</td>   <td>29007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageOrdersTestCases@6b9651f3]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>23/01/16 09:20:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.LoginTestCases@4abdb505]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@345281752</td>   <td></td> </tr>
+<tr bgcolor="85bc9a">  <td>23/01/16 09:20:50</td>   <td>3485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.profileNameStyleValidation()[pri:3, instance:testCases.LoginTestCases@4abdb505]">profileNameStyleValidation</td> 
+  <td>main@345281752</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>23/01/16 09:20:51</td>   <td>4242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.LoginTestCases@4abdb505]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@345281752</td>   <td></td> </tr>
 </table>
